impl : deploy automation user, message change. + gitignore build folder

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "node deploy.js"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +49,6 @@
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3"
-  }
+  },
+  "type": "module"
 }
